config/waybar/style.css
* {
  font-family: "Noto Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
}

window#waybar {
  background-color: transparent;
  color: #fff;
  transition-property: background-color;
  transition-duration: 0.5s;
  background-color: rgba(0, 0, 0, 0.6);
}

.modules-left {
  padding-right: 20px;
}

.modules-right {
  padding-left: 20px;
}

.modules-center {
  padding: 0 20px;
}

button {
  box-shadow: inset 0 -3px transparent;
  border: none;
  border-radius: 0;
}

button:hover {
  background: inherit;
  box-shadow: inset 0 -3px #fff;
}

#workspaces button {
  padding: 0 5px;
  background-color: transparent;
  color: #fff;
  border-radius: 3px 3px 0 0;
}

#workspaces button:hover {
  background: rgba(255, 255, 255, 0.2);
}

#workspaces button.active {
  background-color: rgba(255, 255, 255, 0.35);
  box-shadow: inset 0 -3px #fff;
}

#workspaces button.urgent {
  background-color: #eb4d4b;
}

window#waybar.empty #window,
window#waybar.empty #window:hover {
  background-color: transparent;
  color: transparent;
  border: none;
  padding: 0;
}

#clock,
#battery,
#cpu,
#memory,
#temperature,
#network,
#wireplumber,
#custom-media,
#custom-clipboard,
#custom-power,
#custom-logo,
#mpd,
#window {
  padding: 0 10px;
  color: #fff;
  border-radius: 3px;
  transition:
    padding 200ms,
    border 200ms,
    background-color 200ms;
}

#clock:hover,
#battery:hover,
#cpu:hover,
#memory:hover,
#temperature:hover,
#network:hover,
#wireplumber:hover,
#custom-media:hover,
#custom-clipboard:hover,
#custom-power:hover,
#custom-logo:hover,
#mpd:hover,
#window:hover {
  padding: 0 15px;
  color: #fff;
  background-color: rgba(255, 255, 255, 0.35);
  border: 1px solid #fff;
}

#tray * {
  padding: 0 4px;
  border-radius: 3px;
  transition:
    border 200ms,
    background-color 200ms;
}

#tray *:hover {
  background-color: rgba(255, 255, 255, 0.35);
  border: 1px solid #fff;
}

#workspaces {
  padding: 0 4px;
}

.modules-left > widget:first-child > #workspaces {
  margin-left: 0;
}

.modules-right > widget:last-child > #workspaces {
  margin-right: 0;
}

#battery {
  color: #fff;
}

@keyframes blink {
  to {
    background-color: #fff;
    color: #000000;
  }
}

/* Using steps() instead of linear as a timing function to limit cpu usage */
#battery.critical:not(.charging) {
  background-color: #f53c3c;
  color: #fff;
  animation-name: blink;
  animation-duration: 0.5s;
  animation-timing-function: steps(12);
  animation-iteration-count: infinite;
  animation-direction: alternate;
}

label:focus {
  background-color: #000000;
}

#privacy {
  padding: 0;
}

#privacy-item {
  padding: 0 3px;
  color: #fff;
}

#privacy-item.screenshare {
  background-color: #cf5700;
}

#privacy-item.audio-in {
  background-color: #1ca000;
}

#privacy-item.audio-out {
  background-color: #0069d4;
}

#custom-cava_mviz {
  font-family: "Courier New";
  border-radius: 3px;
  padding: 0 5px;
  transition:
    padding 200ms,
    background-color 200ms,
    border 200ms;
}

#custom-cava_mviz:hover {
  background-color: rgba(255, 255, 255, 0.35);
  border: 1px solid #fff;
  padding: 0 10px;
}

